Add minor fixes and  add the header script in the include body-end

--- a/projects/amz-eg-node/views/shop/index-login.ejs
+++ b/projects/amz-eg-node/views/shop/index-login.ejs
@@ -182,6 +182,9 @@
 
     <%- include("../includes/index-footer.ejs") %>
 
+    <script src="./js/code.jquery.com_jquery-3.7.0.js"></script>
+    <script src="./public/js/main_login.js"></script>
+
     
 <%- include("../includes/html-end.ejs") %>
 
