Fix the main navigation on hover menu, add proper JS Scripts

--- a/recap/nodejs/recap/section13/views/includes/index-header.ejs
+++ b/recap/nodejs/recap/section13/views/includes/index-header.ejs
@@ -5,7 +5,7 @@
             <div class="main-navigation__wrapper">
             <div class="main-navigation__container">
                 <ul class="main-navigation__List-1">
-                    <li class="main-navigation__List-1-link-small not_desktop"><a href="" id="header-menu" aria-label="browse categories">=</a></li>
+                    <li class="main-navigation__List-1-link-small not_desktop"><a id="header-menu" aria-label="browse categories">=</a></li>
                     <li class="main-navigation__List-1-link-logo"><a href="" id="header-logo" aria-label="Amazon egypt home"></a><a href="" id="header-logo--text" aria-label="country selection, currently browsing amazon egypt shop">.eg</a></li>
                     <li class="main-navigation__List-1-link not_mobile"><a href="" aria-label="choose delivery destination country">Deliver to</a></li>
                 </ul>
@@ -14,8 +14,8 @@
 
                 <ul class="main-navigation__List-2">
                     <li class="main-navigation__List-2-link not_mobile"><a href="">Language</a></li>
-                    <li class="main-navigation__List-2-link">
-                        <a href="">Login</a>
+                    <li class="main-navigation__List-2-link login-link-container">
+                        <a href="" class="login-link">Login</a>
                         <span id="login-link--hover-menu">
                             <div class="login-link--hover-menu--section1">
                                 <ul class="login-link--hover-menu--section--buy-again">
@@ -25,7 +25,7 @@
                                     <li>
                                         <div class="hover-menu__item-container">
                                             <div class="hover-menu__item-container--image-container">
-                                                <img src="./img/product-image.jpg">
+                                                <img src="/img/product-image.jpg">
                                             </div>
                                             <div class="hover-menu__item-container--info-container">
                                                 <a href="">Zeina asdasd wqeqweqwe adasdasd</a>
