--- a/recap/nodejs/recap/section13/public/css/nav_style.css
+++ b/recap/nodejs/recap/section13/public/css/nav_style.css
@@ -783,7 +783,7 @@ media queries menu
 }
 
 @media screen and (min-width: 900px) {
-    .login-link {
+    .login-link-container {
         position: relative;
     }
 
@@ -796,12 +796,12 @@ media queries menu
         width: 700px;
         border-radius: 3px;
         position:absolute;
-        bottom: 0;
-        right: 0;
-        transform: translate(0%, 100%);
+        /* bottom: 0; */
+        /* left: 0; */
+        transform: translate(-23.25%, 60%);
     
-        display: none;
-        /* display: flex; */
+        /* display: none; */
+        display: flex;
         flex-direction: row;
         justify-content:unset;
 
@@ -815,8 +815,8 @@ media queries menu
         background-color: white;
         content: "";
         position: absolute;
-        top: -2.5%;
-        right: 4.5%;
+        top: -6px;
+        right: 30px;
         border-left: 1px solid var(--footer-text-grey2);
         border-top: 1px solid var(--footer-text-grey2);
         transform: rotate(45deg);
