--- a/recap/nodejs/recap/section13/views/admin/edit-product.ejs
+++ b/recap/nodejs/recap/section13/views/admin/edit-product.ejs
@@ -51,7 +51,7 @@
                     <h3>Stock</h3>
                     <div>
                         <label for="productAvailability">How many items available <small>(required)</small></label>
-                        <input required type="number" placeholder="product's availability" name="productAvailability" id="productAvailability">
+                        <input required type="number" placeholder="product's availability" name="productAvailability" id="productAvailability" min="1" max="100">
                     </div>
                     <!-- <label for="productColor">How many items sold</label>
                     <input type="text" placeholder="product's color" name="productColor"> -->
@@ -64,11 +64,11 @@
                     <h3>Customer delivery Option <small>(required)</small></h3>
                     <p>Does the product's price include the delivery fees ?</p>
                     <div class="check-box--container">
-                        <input required type="radio" name="productFreeDelivery" id="productFreeDelivery">
+                        <input required type="radio" name="productFreeDelivery" id="productFreeDelivery" value="included">
                         <label for="productFreeDeliveryivery">Delivery Included</label>
                     </div>
                     <div class="check-box--container">
-                        <input required type="radio" name="productNotFreeDelivery" id="productNotFreeDelivery">
+                        <input required type="radio" name="productFreeDelivery" id="productNotFreeDelivery" value="notIncluded">
                         <label for="productNotFreeDelivery">Delivery Not Included</label>
                     </div>
                 </div>
@@ -118,13 +118,14 @@
                         <select required id="productAge" name="productAge">
                             <option>Adult</option>
                             <option>Child</option>
+                            <option selected>All</option>
                         </select>
                     </div>
 
                     <div>
                         <label for="productDepartment">Product's Department <small>(required)</small></label>
                         <select required id="productDepartment" name="productDepartment">
-                            <option>Electronics</option>
+                            <option selected>Electronics</option>
                             <option>Clothing</option>
                         </select>
                     </div>
@@ -132,7 +133,7 @@
                     <div class="productSection_Electronics__container">
                         <label for="productSection_Electronics">Product's Electronics Section <small>(required)</small></label>
                         <select required id="productSection_Electronics" name="productSection_Electronics">
-                            <option>Speakers</option>
+                            <option selected>Speakers</option>
                             <option>Phones</option>
                         </select>
                     </div>
@@ -258,6 +259,7 @@
 
 <%- include("../includes/index-footer.ejs") %>
 
-    <script src="/js/main_add-product.js"></script>
+<script src="/js/main_add-product.js"></script>
+
 
 <%- include("../includes/html-end.ejs") %>
