Allow to use only one radio button for the form input of 'free Delivery', hide the category labels when the selection is hidden by default

--- a/recap/nodejs/recap/section13/views/includes/html-head.ejs
+++ b/recap/nodejs/recap/section13/views/includes/html-head.ejs
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/basic.css">
     <link rel="stylesheet" href="/css/nav_style.css">
     <link rel="stylesheet" href="/css/footer_style.css">
+    <script src="/js/main_header.js" defer></script>
 
 
 
