--- a/recap/nodejs/recap/section13/public/css/add-product_style.css
+++ b/recap/nodejs/recap/section13/public/css/add-product_style.css
@@ -114,7 +114,7 @@ input[type="checkbox"], input[type="radio"] {
 
 }
 
-#productSection_Electronics, #productSection_Clothing {
+.productSection_Clothing__container {
     display: none;
 }
 
