Add input names in the ejs to be collected by database, adjust stars and rating ejs values, add a button outline and shadow on click and remove on blur

--- a/recap/nodejs/recap/section13/public/css/basic.css
+++ b/recap/nodejs/recap/section13/public/css/basic.css
@@ -71,6 +71,11 @@ body {
     --qualified-text: #007500;
     --red-label: #cc0d39;
 
+    --link-click-outline1: #186f80;
+    --link-click-outline2: #c9f4fa;
+    --link-click-outline2-shadow: #e0fbff;
+
+
 
 
 }
@@ -107,4 +112,13 @@ body {
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
     border: 0;
+}
+
+.button-clicked {
+    outline:2px solid var(--link-click-outline2);
+    outline-offset:  3px;
+    box-shadow: 
+    0px 0px 5px 4px #fff,
+    0px 0px 1px 4px var(--link-click-outline1),
+    0px 0px 2px 7px var(--link-click-outline2-shadow);
 }
