--- a/recap/nodejs/recap/section13/views/includes/html-head.ejs
+++ b/recap/nodejs/recap/section13/views/includes/html-head.ejs
@@ -6,7 +6,7 @@
     <title> <%=myTitle %> </title>
 
     <style>
-        @import url('https://fonts.cdnfonts.com/css/amazon-ember');
+        /* @import url('https://fonts.cdnfonts.com/css/amazon-ember'); */
         main {
             min-height: 130vh;
         }
