--- a/recap/nodejs/recap/section13/views/shop/all-products.ejs
+++ b/recap/nodejs/recap/section13/views/shop/all-products.ejs
@@ -78,19 +78,19 @@
                         <% if (prods.length > 0) { %>
                             <% let i = 1%>
                             <% for (let product of prods) { %>
-                                <a href="/products/<%= product._id%>" class="btn"> Details</a>
+                                <!-- <a href="/products/<%= product._id%>" class="btn"> Details</a> -->
 
                             <div class="main__main__products-list--item" aria-label="product number <%=i%>">
                                 <!-- <div class="main__main__products-list--item" aria-label="product number x"> -->
 
                                 
-                                <a href="" class="main__main__products-list--item--image--container" href="">
+                                <a href="/products/<%= product._id%>" class="main__main__products-list--item--image--container" href="">
                                     <img src="<%= product.imageUrl %>" class="main__main__products-list--item--image" alt="<%= product.imageAlt %>">
                                 </a>                        
                                 <div class="main__main__products-list--item--description" aria-label="product's details">
                                     
                                     <span aria-label="product's name">
-                                        <a href="" class="main__main__products-list--item--description--header-link">
+                                        <a href="/products/<%= product._id%>" class="main__main__products-list--item--description--header-link">
                                             <%= product.title %>
                                         </a>
                                     </span>
@@ -198,7 +198,6 @@
     </main>
 
     <%- include("../includes/index-footer.ejs") %>
-
     
 <%- include("../includes/html-end.ejs") %>
 
