Make the desktop hover menu not be displayed when reloading the page

--- a/recap/nodejs/recap/section13/public/css/nav_style.css
+++ b/recap/nodejs/recap/section13/public/css/nav_style.css
@@ -800,8 +800,8 @@ media queries menu
         /* left: 0; */
         transform: translate(-23.25%, 60%);
     
-        /* display: none; */
-        display: flex;
+        display: none;
+        /* display: flex; */
         flex-direction: row;
         justify-content:unset;
 
