Work on the admin products page
Work on the edit product page and insert pre-entered data in the input fields

Add to the navigation hover menu the links for the admin-products and add-product pages

--- a/recap/nodejs/recap/section13/views/includes/index-header.ejs
+++ b/recap/nodejs/recap/section13/views/includes/index-header.ejs
@@ -53,8 +53,8 @@
                                             <button class="mobile-menu-close">x</button>
                                         </span>
                                     </li>
-                                    <li><a href="./index.html">Your Products on Sale</a></li>
-                                    <li><a href="./index-add-product.html">Add a Product</a></li>
+                                    <li><a href="/admin/products">Your Products on Sale</a></li>
+                                    <li><a href="/admin/add-product">Add a Product</a></li>
                                     <li><a href="./index-orders.html">Your Orders</a></li>
                                     <li><a href="">Logout</a></li>
 
