--- a/recap/nodejs/recap/section13/public/css/admin-products.css
+++ b/recap/nodejs/recap/section13/public/css/admin-products.css
@@ -197,7 +197,6 @@ main {
 
 
 .main__main__products-list--item--description--sold {
-    color: rgba(1, 110, 72, 0.9);
     font-size: 0.7em;
 
 }
@@ -208,7 +207,7 @@ main {
 }
 
 
-.main__main__products-list--item--description-buttons button{
+.main__main__products-list--item--description-buttons button {
     padding: 0.1em 0.6em 0.15em 0.5em;
     border: 0;
     border-radius: 2px;
@@ -217,6 +216,11 @@ main {
 
     font-size: 0.8em;
 
+}
+
+.main__main__products-list--item--description-buttons button a {
+    text-decoration: none;
+    color: var(--sort-button-text);
 }
 
 
