change product.imageAlt to just product.title

--- a/recap/nodejs/recap/section13/views/admin/admin-products.ejs
+++ b/recap/nodejs/recap/section13/views/admin/admin-products.ejs
@@ -86,7 +86,7 @@
 
 
                             <a href="" class="main__main__products-list--item--image--container">
-                                <img src="<%=product.imageUrl%>" class="main__main__products-list--item--image" alt="<%=product.imageAlt%> ">
+                                <img src="<%=product.imageUrl%>" class="main__main__products-list--item--image" alt="<%=product.title%> ">
                             </a>                        
                             <div class="main__main__products-list--item--description" aria-label="product's details">
 
