--- a/recap/nodejs/recap/section13/views/admin/edit-product.ejs
+++ b/recap/nodejs/recap/section13/views/admin/edit-product.ejs
@@ -45,10 +45,10 @@
                         required type="text" placeholder="product's image url" name="productImage" id="productImage">
                     </div>
                     
-                    <div>
+                    <!-- <div>
                         <label for="productImageAlt">Image's Description <small>(required)</small></label>
                         <input required type="text" placeholder="product's image description" name="productImageAlt" id="productImageAlt"> 
-                    </div>    
+                    </div>     -->
 
                 </div>
 
