--- a/recap/nodejs/recap/section13/views/shop/product-details.ejs
+++ b/recap/nodejs/recap/section13/views/shop/product-details.ejs
@@ -351,7 +351,7 @@
 
                 <div class="content__item__manufacturer-notes--intro full_width__border">
                     <div class="content__item__manufacturer-notes--intro--image">
-                        <img src="<%= product.imageUrl%>" alt="<%= product.imageAlt%>">
+                        <img src="<%= product.imageUrl%>" alt="<%= product.title%>">
                     </div>
 
                     
