--- a/recap/nodejs/recap/section13/views/shop/all-products.ejs
+++ b/recap/nodejs/recap/section13/views/shop/all-products.ejs
@@ -85,7 +85,7 @@
 
                                 
                                 <a href="/products/<%= product._id%>" class="main__main__products-list--item--image--container" href="">
-                                    <img src="<%= product.imageUrl %>" class="main__main__products-list--item--image" alt="<%= product.imageAlt %>">
+                                    <img src="<%= product.imageUrl %>" class="main__main__products-list--item--image" alt="<%= product.title %>">
                                 </a>                        
                                 <div class="main__main__products-list--item--description" aria-label="product's details">
                                     
